@@ -18,14 +18,16 @@ APPNAME=`basename $NAME`
 MOZ_APP_LAUNCHER=$NAME
 SERIES=@SERIES@
 BRAND="@STARTUP_WM_CLASS@"
-#if DEB_MIN_SYSDEPS == 1
-EXE="$APPNAME"-bin
-#else
-EXE=$APPNAME
-#endif
+DEB_MIN_SYSDEPS=@DEB_MIN_SYSDEPS@
 
 export MOZ_APP_LAUNCHER
 unset UBUNTU_MENUPROXY
+
+if [ $DEB_MIN_SYSDEPS -eq 1 ] ; then
+	EXE="$APPNAME"-bin
+else
+	EXE=$APPNAME
+fi
 
 while [ ! -x $LIBDIR/$EXE ] && [ -L "$NAME" ] ; do
     NAME=`readlink -f $NAME`
@@ -88,10 +90,10 @@ if [ -x $LIBDIR/xulapp-profilemigrator ] ; then
     fi
 fi
 
-#if DEB_MIN_SYSDEPS == 1
-LD_LIBRARY_PATH=${LIBDIR}:${LIBDIR}/plugins${LD_LIBRARY_PATH:+":$LD_LIBRARY_PATH"}
-export LD_LIBRARY_PATH
-#endif
+if [ $DEB_MIN_SYSDEPS -eq 1 ] ; then
+    LD_LIBRARY_PATH=${LIBDIR}:${LIBDIR}/plugins${LD_LIBRARY_PATH:+":$LD_LIBRARY_PATH"}
+    export LD_LIBRARY_PATH
+fi
 
 if [ $moz_debug -eq 1 ] ; then
     exec $GDB $moz_debugger_args --args $LIBDIR/$EXE "$@"
