@@ -582,6 +582,11 @@ firefox-4.0 (4.0~b8~hg20101107r57082+nobinonly-0ubuntu1) UNRELEASED; urgency=low
   * Port bz460917_att350845_reload_new_plugins to Firefox 4 so that
     we can start the plugin installer without throwing an exception
     - update debian/patches/bz460917_att350845_reload_new_plugins.patch
+  * Revert the compile-time checks to run-time checks in the launcher
+    script, as the preprocessor removes the #!/bin/sh line
+    - rename debian/firefox.sh.pp => debian/firefox.sh.in
+    - update debian/firefox.sh.in
+    - update debian/rules
 
   [ Alexander Sack <asac@linaro.org> ]
   * add support for mozilla breakpad symbols and in turn enable
@@ -591,7 +596,7 @@ firefox-4.0 (4.0~b8~hg20101107r57082+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     - update debian/control
     - update debian/rules
 
- -- Chris Coulson <chris.coulson@canonical.com>  Mon, 08 Nov 2010 19:38:35 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Mon, 08 Nov 2010 22:34:39 +0000
 
 firefox-3.6 (3.6~a2~hg20090810r31291+nobinonly-0ubuntu1) UNRELEASED; urgency=low
 
